[project]
name = "demo-mcp-server"
version = "0.1.0"
description = "Runware MCP server using FastMCP"
requires-python = ">=3.10"
authors = [{ name = "Runware", email = "support@runware.ai" }]
keywords = ["mcp", "llm", "automation"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastmcp",
    "requests>=2.31.0",
    "uvicorn>=0.38.0",
    "python-dotenv>=1.0.0",
    "smithery>=0.2.2",
    "starlette>=0.50.0"
]

[tool.setuptools]
py-modules = ["MCP-RUNWARE"]
